bee-common/bee-packable-derive/tests/fail/duplicated_tag_enum.stderr
error: unreachable pattern
  --> tests/fail/duplicated_tag_enum.rs:16:22
   |
16 |     #[packable(tag = 0)]
   |                      ^
   |
note: the lint level is defined here
  --> tests/fail/duplicated_tag_enum.rs:10:10
   |
10 | #[derive(Packable)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `Packable` (in Nightly builds, run with -Z macro-backtrace for more info)
